feat(generator): add DELETE operation support and improve API generation
- Add support for DELETE operations in OpenAPI
- Implement API function deduplication based on unique identifiers
- Update output directory handling and naming convention
- Improve import statements and module exports
- Refactor template files for better code organization
- Update README with installation and usage instructions
- Add screenshots to documentation

--- a/templates/file.tmpl
+++ b/templates/file.tmpl
@@ -1,12 +1,16 @@
 // {{ .ModuleName }} 模块API函数
-{{ range .Imports }}
-{{ if eq .Module $.ModuleName }}
+{{- range .Imports }}
+{{- if eq .Module $.ModuleName }}
 import { {{ range $index, $interface := .Interfaces }}{{ if $index }}, {{ end }}{{ $interface }}{{ end }} } from './index.js'
-{{ else }}
+{{- else }}
 import { {{ range $index, $interface := .Interfaces }}{{ if $index }}, {{ end }}{{ $interface }}{{ end }} } from '../{{ .Module }}/index.js'
-{{ end }}
-{{ end }}
+{{- end }}
+{{- end }}
+import { request } from '../index.js'
 
-{{ range .Functions }}
-{{ . }}
-{{ end }}
+{{- range $index, $func := .Functions }}
+{{- if $index }}
+
+{{- end }}
+{{ $func }}
+{{- end }}
