--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -3,9 +3,13 @@
 // 导出所有类型定义
 export * from './types/index.js'
 
-// 导出所有API函数
-{{ range $name, $module := .Modules }}
-{{ if ne $name "types" }}
-export * from './{{ $name }}/api.js'
-{{ end }}
-{{ end }}
+// 定义 request 接口和实例
+export interface RequestInstance {
+  GET<T>(url: string, params?: any): Promise<T>
+  POST<T>(url: string, params?: any): Promise<T>
+  PUT<T>(url: string, params?: any): Promise<T>
+  DELETE<T>(url: string, params?: any): Promise<T>
+}
+
+declare const request: RequestInstance
+export { request }
