refactor/templates: improve code formatting and add support for empty interfaces
- Remove unnecessary newlines and spaces in templates
- Add support for generating empty interfaces when there are no properties
- Improve documentation by adding schema names and property descriptions
- Update index.tmpl to include request declaration

--- a/templates/interface-definition.tmpl
+++ b/templates/interface-definition.tmpl
@@ -1,11 +1,19 @@
+{{- if ne .SchemaName "" }}
 /**
  * {{ .SchemaName }}
  */
+{{- end }}
+{{- if .Properties }}
 export interface {{ .TypeName }} {
 {{- range $key, $prop := .Properties }}
+  {{- if ne $prop.Description "" }}
   /**
    * {{ $prop.Description }}
    */
+  {{- end }}
   {{ $key }}{{ if not $prop.IsRequired }}?{{ end }}: {{ $prop.TypeName }}
 {{- end }}
 }
+{{- else }}
+export interface {{ .TypeName }} {}
+{{- end }}
