--- a/templates/file.tmpl
+++ b/templates/file.tmpl
@@ -7,8 +7,7 @@ import { {{ range $index, $interface := .Interfaces }}{{ if $index }}, {{ end }}
 {{- end }}
 {{- end }}
 import { request } from '../index.js'
-
-{{- range $index, $func := .Functions }}
+{{ range $index, $func := .Functions }}
 {{- if $index }}
 
 {{- end }}
