--- a/templates/interface.tmpl
+++ b/templates/interface.tmpl
@@ -1,4 +1,4 @@
 // {{ .ModuleName }} 模块接口定义
-{{ range $name, $code := .Interfaces }}
+{{- range $name, $code := .Interfaces }}
 {{ $code }}
-{{ end }}
+{{- end }}
