refactor(templates): improve code generation for imports and function declarations
- Optimize import statements for modules with more than 4 interfaces
- Enhance function declaration to handle long function signatures

--- a/templates/file.tmpl
+++ b/templates/file.tmpl
@@ -1,9 +1,27 @@
 // {{ .ModuleName }} 模块API函数
 {{- range .Imports }}
 {{- if eq .Module $.ModuleName }}
+{{- if gt (len .Interfaces) 4 }}
+import {
+{{- range $index, $interface := .Interfaces }}{{- if $index }},
+{{- end }}
+  {{ $interface }}
+{{- end }}
+} from './index.js'
+{{- else }}
 import { {{ range $index, $interface := .Interfaces }}{{ if $index }}, {{ end }}{{ $interface }}{{ end }} } from './index.js'
+{{- end }}
+{{- else }}
+{{- if gt (len .Interfaces) 4 }}
+import {
+{{- range $index, $interface := .Interfaces }}{{- if $index }},
+{{- end }}
+  {{ $interface }}
+{{- end }}
+} from '../{{ .Module }}/index.js'
 {{- else }}
 import { {{ range $index, $interface := .Interfaces }}{{ if $index }}, {{ end }}{{ $interface }}{{ end }} } from '../{{ .Module }}/index.js'
+{{- end }}
 {{- end }}
 {{- end }}
 import { request } from '../index.js'
