refactor: add eslint disable comment for TypeScript any usage
- Add eslint disable comment for TypeScript any usage in the index template file
- This change prepares for the automatic template generation logic

--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,3 +1,4 @@
+/* eslint-disable @typescript-eslint/no-explicit-any */
 // API 模块导出文件
 
 // 导出所有类型定义
@@ -13,4 +14,3 @@ export interface RequestInstance {
 
 declare const request: RequestInstance
 export { request }
-
