--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,8 +1,9 @@
 /* eslint-disable @typescript-eslint/no-explicit-any */
-// API 模块导出文件
+import req from '../request.ts'
 
 // 导出所有类型定义
-export * from './types/index.js'
+export * from './types/index.ts'
+export { request }
 
 // 定义 request 接口和实例
 export interface RequestInstance {
@@ -12,5 +13,4 @@ export interface RequestInstance {
   DELETE<T>(url: string, params?: any): Promise<T>
 }
 
-declare const request: RequestInstance
-export { request }
+const request: RequestInstance = req
