--- a/templates/interface-definition.tmpl
+++ b/templates/interface-definition.tmpl
@@ -6,9 +6,9 @@
 {{- if .Properties }}
 export interface {{ .TypeName }} {
 {{- range $key, $prop := .Properties }}
-  {{- if ne $prop.Description "" }}
+  {{- if ne $prop.Property.Description "" }}
   /**
-   * {{ $prop.Description }}
+   * {{ $prop.Property.Description }}
    */
   {{- end }}
   {{ $key }}{{ if not $prop.IsRequired }}?{{ end }}: {{ $prop.TypeName }}
